--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.19.2",
     "framer-motion": "^11.3.20",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
